# TJM

./: .env.example  .gitignore  GROUNDING_DOCUMENTATION.md  ICON_DETECTION_DEMO.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  UV_SETUP.md  config.py  debug_network.py  demo_icon_detection.py  generate_screenshots.py  main.py  pyproject.toml  requirements.txt  test_grounding.py
output/: README.md
src/: app.py
src/ai/: __init__.py  candidate_verifier.py  detector.py  gemini_client.py  image_utils.py  json_repair.py  models.py  proposal_generator.py  visualization.py
src/api/: __init__.py  base_client.py  posts_client.py
src/automation/: __init__.py  file_saver.py  icon_locator.py  screenshot.py  template_matcher.py  text_input.py  window_manager.py
utils/: __init__.py  ai_vision_detector.py  api_handler.py  automation.py  icon_detection.py  icon_proposals.py  locate_notepad_utils.py  movement_utils.py  screenshot_utils.py
utils/ai_vision_detector/: __init__.py  candidate_verifier.py  detector.py  image_utils.py  json_repair.py  models.py  proposal_generator.py  visualization.py
utils/automation/: __init__.py  file_saver.py  text_input.py  window_manager.py
