[project]
name = "tjm-project-automation"
version = "2.0.0"
description = "Vision-Based Desktop Automation with Dynamic Icon Grounding"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-genai==0.3.0",
    "python-dotenv==1.0.0",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "MouseInfo==0.1.3",
    "numpy==2.2.6",
    "opencv-python==4.13.0.92",
    "pillow==11.1.0",
    "requests==2.32.5",
    "urllib3==2.6.3",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
tjm-automation = "src.app:run"
